<resources>
    <string name="app_name">PersonalTrainerManagement</string>
    <string name="cadastro">Trained Person Register</string>
    <string name="telefone1">Phone:</string>
    <string name="telefone2">Phone:</string>
    <string name="email">Email:</string>
    <string name="idade">Years old:</string>
    <string name="objetivo">Goal:</string>
    <string name="hipertrofia">Hypertrophy</string>
    <string name="preparo">Physical Preparation</string>
    <string name="saude">Health</string>
    <string name="padraoTelefone" translatable="false">(DDD)*********</string>
    <string name="endereco">Address:</string>
    <string name="rua">Street:</string>
    <string name="numero" translatable="false">Nº:</string>
    <string name="comp">Complement:</string>
    <string name="bairro">Neighborhood:</string>
    <string name="cidade">City:</string>
    <string name="estado">State:</string>
    <string name="rs">RS</string>
    <string name="sc">SC</string>
    <string name="pr">PR</string>
    <string name="rj">RJ</string>
    <string name="sp">SP</string>
    <string name="es">ES</string>
    <string name="mg">MG</string>
    <string name="go">GO</string>
    <string name="ms">MS</string>
    <string name="mt">MT</string>
    <string name="df">DF</string>
    <string name="ba">BA</string>
    <string name="pe">PE</string>
    <string name="se">SE</string>
    <string name="al">AL</string>
    <string name="pb">PB</string>
    <string name="rn">RN</string>
    <string name="ce">CE</string>
    <string name="ma">MA</string>
    <string name="pi">PI</string>
    <string name="to">TO</string>
    <string name="pa">PA</string>
    <string name="ap">AP</string>
    <string name="am">AM</string>
    <string name="rr">RR</string>
    <string name="ro">RO</string>
    <string name="ac">AC</string>
    <string name="cep">PostCode:</string>
    <string name="limpar">Clean</string>
    <string name="salvar">Save</string>
    <string name="campos_limpos">Clear fields</string>
    <string name="selecione_um_objetivo">Select a goal !</string>
    <string name="digite_um_numero_valido">Type a valid number</string>
    <string name="nao_digitou_numero">"You didn't type a number "</string>
    <string name="texto_cep">*****-***</string>
    <string name="telefone_deve_conter_so_numeros">Phone number must contain only numbers</string>
    <string name="cep_invalido">Invalid PostCode Format!</string>
    <string name="dados_cadastrados_com_sucesso">Data registered successfully</string>
    <string name="eduardo">Eduardo</string>
    <string name="beatriz">Beatriz</string>
    <string name="monica">Mônica</string>
    <string name="rosangela">Rosângela</string>
    <string name="lucas">Lucas</string>
    <string name="aline">Aline</string>
    <string name="giovanna">Giovanna</string>
    <string name="ricardo">Ricardo</string>
    <string name="amanda">Amanda</string>
    <string name="angelica">Angélica</string>
    <string name="eduardoEmail">eduardo@email.com</string>
    <string name="beatrizEmail">beatriz@email.com</string>
    <string name="monicaEmail">monica@email.com</string>
    <string name="rosangelaEmail">rosangela@email.com</string>
    <string name="lucasEmail">lucas@email.com</string>
    <string name="alineEmail">aline@email.com</string>
    <string name="giovannaEmail">giovanna@email.com</string>
    <string name="ricardoEmail">ricardo@email.com</string>
    <string name="amandaEmail">amanda@email.com</string>
    <string name="angelicaEmail">angelica@email.com</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="autor">Student: Eduardo Nepomuceno da Rocha</string>
    <string name="curso">Java Technologies Specialization</string>
    <string name="email_autor">Email: enrocha0312@gmail.com</string>
    <string name="descricao">App for management of trained people by a personal trainer</string>
    <string name="deixe_o_telefone_2_vazio_ou_preencha_o_corretamente_com_n_meros">Let phone number 2 empty ou type only numbers</string>
    <string name="controle_de_alunos">People Control</string>
    <string name="cancelar">Cancel</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="cadastrar_novo_aluno">Register new trained person</string>
    <string name="editar_aluno">Person Edit</string>
    <string name="tentando_cadastrar_aluno_com_mesmo_e_mail">You\'ve tried to register another person with the same Email</string>
    <string name="sugerir_objetivo">Goal Suggest</string>
    <string name="ordenacao">"Sort "</string>
    <string name="nome">Name:</string>
    <string name="only_phone_number_to_can_be_empty">Only Phone Number 2 to can be empty</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="verification">Verification</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="do_you_really_wish_to_delete_it">Do you really wish to delete it?</string>
    <string name="trained_person">"\nTrained Person: "</string>
    <string name="problema_de_banco">Database Integrity Problem</string>
    <string name="erro_ao_editar_mesmos_campos">You are trying to update an entity with the data which are already registered</string>
    <string name="error_ao_alterar">Error when trying to update</string>
    <string name="error_ao_tentar_apagar">Error while trying to delete</string>
    <string name="nao_apagou">Did not erase</string>

</resources>